--- a/features/in-app-purchases/closed-testing.mdx
+++ b/features/in-app-purchases/closed-testing.mdx
@@ -1,27 +1,15 @@
 ---
-title: "Test on Android"
+title: "Closed Testing"
 description: "Set up closed testing for your Android app to test in-app purchases"
 ---
 
-## Prerequisites
-
-Before setting up closed testing, make sure you have:
-
-- Completed the [Google Play Console Setup](./google-play-console-setup) for your app
-- Created a production build (.aab file) of your app
-- Access to your app's Google Play Console
-
 ## Set Up Closed Testing
-
-
 
 Once you've completed the app setup, you can access **Closed testing** from:
 - Your app's **Dashboard** page, or
 - **Test and release** > **Testing** > **Closed testing** in the left sidebar
 
 <Steps>
-
-
   <Step title="Configure Closed Test Track">
     1. Navigate to the **Closed testing** section in Google Play Console
     2. You'll see a pre-created **Closed testing - Alpha** track
@@ -84,6 +72,4 @@ They will also be added as a tester in the closed testing track. You need 12 use
 
 With your closed testing track set up, you can now:
 
-1. [Create subscription products](./android-products) for your Android app
-2. [Import your products into RevenueCat](./import-products-rc) for subscription management
-3. [Set up Superwall](./superwall) for paywall management
+[Create subscription products](./android-products) for your Android app
