--- a/features/in-app-purchases/ios-sandbox.mdx
+++ b/features/in-app-purchases/ios-sandbox.mdx
@@ -1,15 +1,7 @@
 ---
-title: "Test on iOS"
+title: "Sandbox Testing"
 description: "Set up sandbox testing for your iOS app to test in-app purchases"
 ---
-
-## Prerequisites
-
-Before setting up sandbox testing, make sure you have:
-
-- Completed the [App Store Connect Setup](./app-store-connect-setup) for your app
-- Created subscription products in [App Store Connect](./ios-products)
-- A development build of your app installed on your iOS device
 
 ## What Is Sandbox Testing?
 
